--- a/RCE/manifest.plist
+++ b/RCE/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.example.com/ipa</string>
+					<string>https://github.com/lei-wen/OTA/raw/master/RCE/RongEnterpriseApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://www.example.com/image.57x57.png</string>
+					<string>https://github.com/lei-wen/OTA/raw/master/RCE/image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://www.example.com/image.512x512.png</string>
+					<string>https://github.com/lei-wen/OTA/raw/master/RCE/image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>RongEnterpriseApp</string>
+				<string>RCETEST</string>
 			</dict>
 			<key>thinned-assets</key>
 			<array>
