--- a/RCE/manifest.plist
+++ b/RCE/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/lei-wen/OTA/raw/master/RCE/RongEnterpriseApp.ipa</string>
+					<string>http://git.moreeasi.com/jiangl/ota_install/blob/046a91d6d9086565fd050affbd7dbc7caa16a288/RCE/RongEnterpriseApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/lei-wen/OTA/raw/master/RCE/image.57x57.png</string>
+					<string>http://git.moreeasi.com/jiangl/ota_install/blob/046a91d6d9086565fd050affbd7dbc7caa16a288/RCE/image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/lei-wen/OTA/raw/master/RCE/image.512x512.png</string>
+					<string>http://git.moreeasi.com/jiangl/ota_install/blob/046a91d6d9086565fd050affbd7dbc7caa16a288/RCE/image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
