--- a/RCE/manifest_jinxin.plist
+++ b/RCE/manifest_jinxin.plist
@@ -13,18 +13,6 @@
 					<key>url</key>
 					<string>https://www.wjrcb.com:6443/testJinXin/Jinxin.ipa</string>
 				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>url</key>
-					<string>https://otadownload.jac.com.cn//download/package/image.57x57.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>url</key>
-					<string>https://otadownload.jac.com.cn//download/package/image.512x512.png</string>
-				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
@@ -34,8 +22,8 @@
 				<string>4.1.0</string>
 				<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
-				<string>锦信</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
 				<string>锦信</string>
 			</dict>
