--- a/RCE/manifest_jinxin.plist
+++ b/RCE/manifest_jinxin.plist
@@ -13,6 +13,18 @@
 					<key>url</key>
 					<string>https://www.wjrcb.com:6443/testJinXin/Jinxin.ipa</string>
 				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>https://raw.githubusercontent.com/lei-wen/OTA/master/RCE/jinxin.57x57.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>https://raw.githubusercontent.com/lei-wen/OTA/master/RCE/jinxin.512x512.png</string>
+				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
